<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.js_labs.gaminggroups.AccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.203"
        android:id="@+id/relativeLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501">

        <ImageView
            android:id="@+id/imageViewAccountTypeBg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/fui_idp_button_background_email" />

        <ImageView
            android:id="@+id/imageViewAccountType"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/fui_ic_mail_white_24dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/imageViewAccountTypeBg"
            android:layout_toRightOf="@+id/imageViewAccountTypeBg"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.441"
        app:layout_constraintHorizontal_bias="0.504">

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/account_Sign_out"
            />

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/account_reset_password" />

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/account_delete_account" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
